# Ai-Agent-Creator

./: .env.example  .gitignore  playwright.config.ts  pyproject.toml  vercel.json
agent-master-console/: .gitignore  README.md
agent-master-console/client/: index.html  package-lock.json  package.json  playwright.config.ts  playwright.global-setup.ts  tsconfig.json
agent-master-console/client/src/: App.tsx  config.ts
agent-master-console/client/src/components/: AgentSidebar.tsx  ChatWindow.tsx  CreateAgentModal.tsx
agent-master-console/client/src/state/: agentStore.ts
agent-master-console/client/tests/: user-flows.spec.ts
agent-master-console/server/: main.py  requirements.txt
agent-master-console/server/agent_core/: agent_registry.py  agent_runtime.py  agent_tools.py
agent-master-console/server/tests/: test_e2e_live.py
api/: index.py  requirements.txt
backend/: package-lock.json  package.json
backend/prisma/: schema.prisma
backend/src/: index.ts
src/: __init__.py  main.py
src/agents/: __init__.py  base.py  orchestrator.py  specialized.py
src/api/: __init__.py  deps.py  routes.py  server.py  websocket.py
src/gui/: __init__.py  index.html  package-lock.json  package.json  vite.config.ts
src/gui/src/: App.tsx  index.css
src/tools/: __init__.py  code_tools.py  file_tools.py  mcp_tools.py
tests/: __init__.py  conftest.py
tests/e2e/: test_agent_flows.py
